# Lab12

./: .travis.yml  CMakeLists.txt  README.md  README_8md.html  annotated.html  async_8cpp.html  async_8cpp__incl.map  async_8cpp__incl.md5  async_8hpp.html  async_8hpp__dep__incl.map  async_8hpp__dep__incl.md5  async_8hpp__incl.map  async_8hpp__incl.md5  async_8hpp_source.html  classbulk__server_1_1client.html  classbulk__server_1_1client__coll__graph.map  classbulk__server_1_1client__coll__graph.md5  classbulk__server_1_1client__inherit__graph.md5  classbulk__server_1_1server.html  classbulk__server_1_1server__coll__graph.md5  classbulk__server_1_1server__inherit__graph.map  classbulk__server_1_1server__inherit__graph.md5  classes.html  classlibasync_1_1common_1_1cmd__pool.html  classlibasync_1_1common_1_1cmd__pool__coll__graph.map  classlibasync_1_1common_1_1cmd__pool__coll__graph.md5  classlibasync_1_1common_1_1counter.html  classlibasync_1_1common_1_1taskpool.html  classlibasync_1_1common_1_1taskpool__coll__graph.map  classlibasync_1_1common_1_1taskpool__coll__graph.md5  classlibasync_1_1common_1_1tsqueue.html  classlibasync_1_1common_1_1tsqueue__coll__graph.map  classlibasync_1_1common_1_1tsqueue__coll__graph.md5  classlibasync_1_1core_1_1context.html  classlibasync_1_1core_1_1context__coll__graph.map  classlibasync_1_1core_1_1context__coll__graph.md5  classlibasync_1_1core_1_1controller.html  classlibasync_1_1core_1_1controller__coll__graph.map  classlibasync_1_1core_1_1controller__coll__graph.md5  classlibasync_1_1core_1_1controller__inherit__graph.map  (+285 more)
cmake/: function.cmake  version.cmake
lib/: CMakeLists.txt
lib/libasync/: CMakeLists.txt
lib/libasync/include/libasync/async/: async.hpp
lib/libasync/include/libasync/common/: cmdpool.hpp  counter.hpp  split.hpp  taskpool.hpp  tsqueue.hpp
lib/libasync/include/libasync/core/: context.hpp  controller.hpp
lib/libasync/include/libasync/io/: conlogger.hpp  filelogger.hpp  ilogger.hpp  ireader.hpp  reader.hpp  tsreader.hpp
lib/libasync/include/libasync/utils/: observer.hpp  subject.hpp
lib/libasync/src/async/: async.cpp
lib/libasync/src/common/: cmdpool.cpp  counter.cpp
lib/libasync/src/core/: context.cpp  controller.cpp
lib/libasync/src/io/: conlogger.cpp  filelogger.cpp  reader.cpp  tsreader.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  files_1.js  files_2.js  files_3.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  (+39 more)
src/: CMakeLists.txt  client.cpp  client.hpp  main.cpp  server.cpp  server.hpp
test/: CMakeLists.txt  testcmdpool.cpp  testcounter.cpp  testreader.cpp  testtsqueue.cpp
